[gd_scene load_steps=10 format=2]

[ext_resource path="res://General/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://General/Assets/Fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://General/Assets/Fonts/MainMenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://General/Scripts/MainMenuButton.gd" type="Script" id=4]
[ext_resource path="res://General/Assets/Fonts/BLOODY.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://General/Scenes/Animations/Fade.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=2]

size = 16
use_mipmaps = true
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[sub_resource type="Animation" id=1]

resource_name = "rotate"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 359.99 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 4, 4 ), Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}

[node name="MainMenu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="MainPage" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.4, 0, 0, 1 )
_sections_unfolded = [ "Grow Direction", "Material", "Rect", "Theme", "Visibility" ]

[node name="MarginContainer" type="MarginContainer" parent="MainPage" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 40
custom_constants/margin_top = 30
custom_constants/margin_left = 40
custom_constants/margin_bottom = 30
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MainPage/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 30.0
margin_right = 984.0
margin_bottom = 570.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="LeftSide" type="VBoxContainer" parent="MainPage/MarginContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 261.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[node name="CenterContainer" type="CenterContainer" parent="MainPage/MarginContainer/HBoxContainer/LeftSide" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 261.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
use_top_left = false
_sections_unfolded = [ "Margin", "Size Flags", "Theme" ]

[node name="Title" type="Label" parent="MainPage/MarginContainer/HBoxContainer/LeftSide/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 6.0
margin_right = 261.0
margin_bottom = 85.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Go-Cell"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Hint", "Pause", "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="MenuButtons" type="VBoxContainer" parent="MainPage/MarginContainer/HBoxContainer/LeftSide" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 131.0
margin_right = 261.0
margin_bottom = 436.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_constants" ]

[node name="Start" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/LeftSide/MenuButtons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 261.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Start Game"
underline = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]
scene_to_load = "res://Scenes/World.tscn"

[node name="TimeTrial" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/LeftSide/MenuButtons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 122.0
margin_right = 261.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Time Trial"
underline = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]
scene_to_load = "res://Scenes/World.tscn"

[node name="Credits" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/LeftSide/MenuButtons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 202.0
margin_right = 261.0
margin_bottom = 262.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Credits"
underline = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_fonts" ]
scene_to_load = "res://Scenes/World.tscn"

[node name="Version" type="Label" parent="MainPage/MarginContainer/HBoxContainer/LeftSide" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 476.0
margin_right = 261.0
margin_bottom = 539.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "by Gold Cell - Game Development Course - Fasilkom UI - v0.0.1"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="RightSide" type="VBoxContainer" parent="MainPage/MarginContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 301.0
margin_right = 944.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 11
size_flags_vertical = 11
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="GameOptions" type="HBoxContainer" parent="MainPage/MarginContainer/HBoxContainer/RightSide" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 643.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Settings" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/RightSide/GameOptions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 232.0
margin_right = 392.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Settings"
underline = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Help" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/RightSide/GameOptions" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_right = 535.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = ExtResource( 3 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Help?"
underline = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Anchor", "Size Flags", "custom_colors", "custom_fonts" ]
scene_to_load = "res://Scenes/World.tscn"

[node name="Exit" type="LinkButton" parent="MainPage/MarginContainer/HBoxContainer/RightSide/GameOptions" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 575.0
margin_right = 643.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_constants/underline_spacing = 10
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Exit"
underline = 1
_sections_unfolded = [ "Anchor", "Margin", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="CenterContainer" type="CenterContainer" parent="MainPage/MarginContainer/HBoxContainer/RightSide" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 49.0
margin_right = 643.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Material", "Size Flags" ]

[node name="TextureRect" type="TextureRect" parent="MainPage/MarginContainer/HBoxContainer/RightSide/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 321.0
margin_top = 245.0
margin_right = 321.0
margin_bottom = 245.0
rect_rotation = 341.655
rect_scale = Vector2( 1.20374, 1.20374 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 4
_sections_unfolded = [ "Anchor", "Margin", "Material", "Rect", "Theme" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainPage/MarginContainer/HBoxContainer/RightSide/CenterContainer/TextureRect" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rotate = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Fade" parent="." index="1" instance=ExtResource( 7 )]

visible = false

[connection signal="pressed" from="MainPage/MarginContainer/HBoxContainer/RightSide/GameOptions/Settings" to="." method="_on_Settings_pressed"]

[connection signal="pressed" from="MainPage/MarginContainer/HBoxContainer/RightSide/GameOptions/Exit" to="." method="_on_Exit_pressed"]

[connection signal="fade_in_finished" from="Fade" to="." method="_on_Fade_fade_in_finished"]

[connection signal="fade_out_finished" from="Fade" to="." method="_on_Fade_fade_out_finished"]


